feat: add getContractInfo API
