# src/swagger.json
@@ -19,6 +19,23 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"GetContractInfoResponseModel": {
+				"properties": {
+					"address": {
+						"type": "string"
+					},
+					"abi": {
+						"items": {},
+						"type": "array"
+					}
+				},
+				"required": [
+					"address",
+					"abi"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"NftMintRequest": {
 				"properties": {
 					"account": {
@@ -95,6 +112,28 @@
 						}
 					}
 				}
+			}
+		},
+		"/framino/contract": {
+			"get": {
+				"operationId": "GetContractInfo",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/GetContractInfoResponseModel"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Framino"
+				],
+				"security": [],
+				"parameters": []
 			}
 		},
 		"/framino/mint": {
